<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <Button
        android:id="@+id/register"
        android:layout_width="182dp"
        android:layout_height="52dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="115dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login"
        android:layout_width="182dp"
        android:layout_height="52dp"
        android:layout_marginStart="114dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="115dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="326dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/powered_by_njan_thanne"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="182dp"
        android:layout_height="272dp"
        android:layout_marginStart="114dp"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="11dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/pngitem_1571486"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="86dp"
        android:layout_height="85dp"
        android:layout_marginTop="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pngitem_987514"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>